--- a/4_PyTorch_Performance_Analysis.ipynb
+++ b/4_PyTorch_Performance_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO53fEra+iV9WLzyjCt6ZKb",
+      "authorship_tag": "ABX9TyNh0G6ccekCbnO7iM1WipW0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RmppAMZ9D2sC",
-        "outputId": "72375a96-3185-4ad9-9746-19b7c07a27bb"
+        "outputId": "2d146a46-7a87-41e2-8860-4afc823985a5"
       },
       "outputs": [
         {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "rn_5ksLDEZdB"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i4TQ3t1jFcGZ",
-        "outputId": "c6e82a3b-c0c3-426b-d9ad-65720d4706b2"
+        "outputId": "dfb55351-6c57-495a-c458-182302460bbc"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9912422/9912422 [00:00<00:00, 103378707.07it/s]\n"
+            "100%|██████████| 9912422/9912422 [00:00<00:00, 102999408.51it/s]\n"
           ]
         },
         {
@@ -135,7 +135,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28881/28881 [00:00<00:00, 23714896.99it/s]\n"
+            "100%|██████████| 28881/28881 [00:00<00:00, 28623746.18it/s]\n"
           ]
         },
         {
@@ -152,7 +152,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1648877/1648877 [00:00<00:00, 26204201.21it/s]\n"
+            "100%|██████████| 1648877/1648877 [00:00<00:00, 25951493.65it/s]\n"
           ]
         },
         {
@@ -169,7 +169,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4542/4542 [00:00<00:00, 12717308.92it/s]\n"
+            "100%|██████████| 4542/4542 [00:00<00:00, 5710590.16it/s]\n"
           ]
         },
         {
@@ -184,9 +184,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Net(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super(Net, self).__init__()\n",
+        "    self.conv1 = nn.Conv2D(1, 32, 3)\n",
+        "    self.conv2 = nn.Conv2D(32, 64, 3)\n",
+        "    self.pool = nn.MaxPool2d(2,2)\n",
+        "    self.fc1 = nn.Linear(64 * 12 * 12, 128)\n",
+        "    self.fc2 = nn.Linear(128, 10)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "      x = F.relu(self.conv1(x))\n",
+        "      x = self.pool(F.relu(self.conv2(x)))\n",
+        "      x = x.view(-1, 64 * 12 * 12)\n",
+        "      x = F.relu(self.fc1(x))\n",
+        "      x = self.fc2(x)\n",
+        "      return x"
+      ],
       "metadata": {
         "id": "cnSbqviIIrMg"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C7mc35eqfG-G"
       },
       "execution_count": null,
       "outputs": []
