--- a/4_PyTorch_Performance_Analysis.ipynb
+++ b/4_PyTorch_Performance_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNh0G6ccekCbnO7iM1WipW0",
+      "authorship_tag": "ABX9TyNSnNL55EFGUfLxGwwspe9h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +13,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -28,20 +30,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RmppAMZ9D2sC",
-        "outputId": "2d146a46-7a87-41e2-8860-4afc823985a5"
+        "outputId": "c064ceed-4ec2-4bff-b755-89669f2edfe1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "GPU available: False\n"
+            "GPU available: True\n"
           ]
         }
       ],
@@ -57,7 +59,7 @@
         "\n",
         "print(\"GPU available: {}\".format(torch.cuda.is_available()))\n",
         "\n",
-        "device = 'cpu'"
+        "device = 'cuda'"
       ]
     },
     {
@@ -102,7 +104,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i4TQ3t1jFcGZ",
-        "outputId": "dfb55351-6c57-495a-c458-182302460bbc"
+        "outputId": "13f4c1ee-0272-49ad-fc64-ba589c078ebc"
       },
       "execution_count": 3,
       "outputs": [
@@ -118,14 +120,27 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9912422/9912422 [00:00<00:00, 102999408.51it/s]\n"
+            "100%|██████████| 9912422/9912422 [00:00<00:00, 161181152.67it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Extracting mnist/MNIST/raw/train-images-idx3-ubyte.gz to mnist/MNIST/raw\n",
+            "Extracting mnist/MNIST/raw/train-images-idx3-ubyte.gz to mnist/MNIST/raw\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
             "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to mnist/MNIST/raw/train-labels-idx1-ubyte.gz\n"
@@ -135,7 +150,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28881/28881 [00:00<00:00, 28623746.18it/s]\n"
+            "100%|██████████| 28881/28881 [00:00<00:00, 109229660.80it/s]\n"
           ]
         },
         {
@@ -152,14 +167,27 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1648877/1648877 [00:00<00:00, 25951493.65it/s]\n"
+            "100%|██████████| 1648877/1648877 [00:00<00:00, 41399384.61it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Extracting mnist/MNIST/raw/t10k-images-idx3-ubyte.gz to mnist/MNIST/raw\n",
+            "Extracting mnist/MNIST/raw/t10k-images-idx3-ubyte.gz to mnist/MNIST/raw\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
             "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to mnist/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
@@ -169,7 +197,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4542/4542 [00:00<00:00, 5710590.16it/s]\n"
+            "100%|██████████| 4542/4542 [00:00<00:00, 3246511.38it/s]\n"
           ]
         },
         {
@@ -188,31 +216,132 @@
         "class Net(nn.Module):\n",
         "  def __init__(self):\n",
         "    super(Net, self).__init__()\n",
-        "    self.conv1 = nn.Conv2D(1, 32, 3)\n",
-        "    self.conv2 = nn.Conv2D(32, 64, 3)\n",
+        "    self.conv1 = nn.Conv2d(1, 32, 3)\n",
+        "    self.conv2 = nn.Conv2d(32, 64, 3)\n",
         "    self.pool = nn.MaxPool2d(2,2)\n",
         "    self.fc1 = nn.Linear(64 * 12 * 12, 128)\n",
         "    self.fc2 = nn.Linear(128, 10)\n",
         "\n",
-        "    def forward(self, x):\n",
-        "      x = F.relu(self.conv1(x))\n",
-        "      x = self.pool(F.relu(self.conv2(x)))\n",
-        "      x = x.view(-1, 64 * 12 * 12)\n",
-        "      x = F.relu(self.fc1(x))\n",
-        "      x = self.fc2(x)\n",
-        "      return x"
+        "  def forward(self, x):\n",
+        "    x = F.relu(self.conv1(x))\n",
+        "    x = self.pool(F.relu(self.conv2(x)))\n",
+        "    x = x.view(-1, 64 * 12 * 12)\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = self.fc2(x)\n",
+        "    return x"
       ],
       "metadata": {
         "id": "cnSbqviIIrMg"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://moderncomputervision.s3.eu-west-2.amazonaws.com/mnist_cnn_net.pth"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C7mc35eqfG-G",
+        "outputId": "f9613412-bede-4a40-e189-49ceec6e7e20"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-04-19 03:14:12--  https://moderncomputervision.s3.eu-west-2.amazonaws.com/mnist_cnn_net.pth\n",
+            "Resolving moderncomputervision.s3.eu-west-2.amazonaws.com (moderncomputervision.s3.eu-west-2.amazonaws.com)... 52.95.144.34\n",
+            "Connecting to moderncomputervision.s3.eu-west-2.amazonaws.com (moderncomputervision.s3.eu-west-2.amazonaws.com)|52.95.144.34|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 4802439 (4.6M) [binary/octet-stream]\n",
+            "Saving to: ‘mnist_cnn_net.pth’\n",
+            "\n",
+            "mnist_cnn_net.pth   100%[===================>]   4.58M  4.50MB/s    in 1.0s    \n",
+            "\n",
+            "2023-04-19 03:14:13 (4.50 MB/s) - ‘mnist_cnn_net.pth’ saved [4802439/4802439]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an instance of the model\n",
+        "net = Net()\n",
+        "net.to(device)\n",
+        "\n",
+        "# Load weights\n",
+        "net.load_state_dict(torch.load('mnist_cnn_net.pth'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3jLZv6Mifcys",
+        "outputId": "e08b37f0-0d72-4a61-90e8-224c4891b86b"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "correct = 0\n",
+        "total = 0\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  for data in testloader:\n",
+        "    images, labels = data\n",
+        "    images = images.to(device)\n",
+        "    labels = labels.to(device)\n",
+        "    outputs = net(images)\n",
+        "    _, predicted = torch.max(outputs.data, 1)\n",
+        "    total += labels.size(0)\n",
+        "    correct += (predicted == labels).sum().item()\n",
+        "\n",
+        "accuracy = 100 * correct / total\n",
+        "print(f'Accuracy of the network on the 10000 test images: {accuracy:.3}%')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7q22I2hAf6QX",
+        "outputId": "42e39998-3326-4974-bdc4-4ae3687c9e2c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy of the network on the 10000 test images: 98.7%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "C7mc35eqfG-G"
+        "id": "JJqJGMqxhP-B"
       },
       "execution_count": null,
       "outputs": []
