--- a/4_PyTorch_Performance_Analysis.ipynb
+++ b/4_PyTorch_Performance_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbbjOVG+O343qxyr/zYZnH",
+      "authorship_tag": "ABX9TyOGe3CghPmEBZWYQ1ubNiJy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2539,10 +2539,54 @@
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "\n",
-        "pred_list"
+        "pred_list = torch.zeros(0, dtype=torch.long, device='cpu')\n",
+        "label_list = torch.zeros(0, dtype=torch.long, device='cpu')\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  for i, (inputs, classes) in enumerate(testloader):\n",
+        "    inputs = inputs.to(device)\n",
+        "    classes = classes.to(device)\n",
+        "    outputs = net(inputs)\n",
+        "    _, preds = torch.max(outputs, 1)\n",
+        "\n",
+        "    pred_list = torch.cat([pred_list, preds.view(-1).cpu()])\n",
+        "    label_list = torch.cat([label_list, classes.view(-1).cpu()])\n",
+        "\n",
+        "conf_mat = confusion_matrix(label_list.numpy(), pred_list.numpy())\n",
+        "print(conf_mat)"
       ],
       "metadata": {
-        "id": "2Yix6jCXjZWo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Yix6jCXjZWo",
+        "outputId": "27f22aa9-51c3-44e7-ca6a-4a360f5ff3cf"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 973    0    2    0    0    1    1    1    2    0]\n",
+            " [   0 1128    1    1    0    0    2    1    2    0]\n",
+            " [   2    2 1018    1    1    0    0    4    4    0]\n",
+            " [   0    0    0 1001    0    5    0    0    4    0]\n",
+            " [   0    0    2    0  971    0    0    0    0    9]\n",
+            " [   2    0    0    3    0  884    1    0    0    2]\n",
+            " [   6    2    1    0    2    5  939    0    3    0]\n",
+            " [   0    2    7    1    0    0    0 1014    2    2]\n",
+            " [   5    0    3    0    0    1    1    2  959    3]\n",
+            " [   2    2    0    3    5    3    0    5    3  986]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EccMCi7llcma"
       },
       "execution_count": null,
       "outputs": []
