--- a/4_PyTorch_Performance_Analysis.ipynb
+++ b/4_PyTorch_Performance_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMupTqnSMYbrlsJD1b8xCyw",
+      "authorship_tag": "ABX9TyMsI3G9MHD7SGe2PUX6kIFx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2737,9 +2737,50 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "print(classification_report(label_list.numpy(), pred_list.numpy()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7JAsXz26mjWh",
+        "outputId": "e58ad3bf-d660-4481-ecb0-22eb1f842277"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.98      0.99      0.99       980\n",
+            "           1       0.99      0.99      0.99      1135\n",
+            "           2       0.98      0.99      0.99      1032\n",
+            "           3       0.99      0.99      0.99      1010\n",
+            "           4       0.99      0.99      0.99       982\n",
+            "           5       0.98      0.99      0.99       892\n",
+            "           6       0.99      0.98      0.99       958\n",
+            "           7       0.99      0.99      0.99      1028\n",
+            "           8       0.98      0.98      0.98       974\n",
+            "           9       0.98      0.98      0.98      1009\n",
+            "\n",
+            "    accuracy                           0.99     10000\n",
+            "   macro avg       0.99      0.99      0.99     10000\n",
+            "weighted avg       0.99      0.99      0.99     10000\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7JAsXz26mjWh"
+        "id": "Eb6Bm5SOm1XV"
       },
       "execution_count": null,
       "outputs": []
