--- a/5_Keras_Fashion_Mnist.ipynb
+++ b/5_Keras_Fashion_Mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPB/3Zlvh0u8cIQfbltYrJJ",
+      "authorship_tag": "ABX9TyNmt7f9WmUS3JnirFsdAN4L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,9 +171,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "img_rows = x_train[0].shape[0]\n",
+        "img_cols = x_train[0].shape[1]\n",
+        "\n",
+        "input_shape = (img_rows, img_cols, 1)"
+      ],
       "metadata": {
         "id": "rKwTgQoRhyVP"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.utils import to_categorical\n",
+        "\n",
+        "y_train = to_categorical(y_train)\n",
+        "y_test = to_categorical(y_test)\n",
+        "\n",
+        "print(\"Number of Classes: \" + str(y_test.shape[1]))\n",
+        "\n",
+        "num_classes = y_test.shape[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "17-y8fRTirCC",
+        "outputId": "106f9fda-e466-4814-fbf0-1bf4520bf080"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of Classes: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "egmkteeNjMXg"
       },
       "execution_count": null,
       "outputs": []
