--- a/5_Keras_Fashion_Mnist.ipynb
+++ b/5_Keras_Fashion_Mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmt7f9WmUS3JnirFsdAN4L",
+      "authorship_tag": "ABX9TyNigCqsuypriw+HXsSv8P8O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,9 +215,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+        "from tensorflow.keras import backend as K\n",
+        "from tensorflow.keras.optimizers import SGD\n",
+        "\n",
+        "model = Sequential()\n",
+        "\n",
+        "model.add(Conv2D(32, kernel_size=(3,3), activation='relu', input_shape=input_shape))\n",
+        "model.add(Conv2D(64, (3,3), activation='relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(128, activation='relu'))\n",
+        "model.add(Dense(num_classes, activation='softmax'))"
+      ],
       "metadata": {
         "id": "egmkteeNjMXg"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FTppzSqIkzc5"
       },
       "execution_count": null,
       "outputs": []
