--- a/5_Keras_Fashion_Mnist.ipynb
+++ b/5_Keras_Fashion_Mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJm/7onhwpoTtKGoXjT3Nv",
+      "authorship_tag": "ABX9TyN9VDT6lrE17/RbEmLrrFf+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -432,9 +432,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x_test /= 255.0"
+      ],
       "metadata": {
         "id": "vuR4fa6tpU-T"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.layers import BatchNormalization\n",
+        "from tensorflow.keras import regularizers\n",
+        "\n",
+        "L2 = 0.001\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Conv2D(32, kernel_size=(3,3), activation='relu', kernel_regularizer=regularizers.l2(L2), input_shape=input_shape))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(Conv2D(64, (3,3), activation='relu', lernel_regularizer=regularizers.l2(L2)))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPooling2D(pool_size=(2,2)))"
+      ],
+      "metadata": {
+        "id": "t_hrOLf_qkkd"
       },
       "execution_count": null,
       "outputs": []
