--- a/8_Pytorch_Fashion_MNIST_2.ipynb
+++ b/8_Pytorch_Fashion_MNIST_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnTz6zv9QQUcCUkTgPmed7",
+      "authorship_tag": "ABX9TyPfwr81JNRN5bwLbq8Z2QCw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,9 +72,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data_transforms = {\n",
+        "    'train': transforms.Compose([\n",
+        "        # Transforms are executed in the order they are called\n",
+        "        # Some transforms return color image hence the need to convert image back to grayscale\n",
+        "        transforms.RandomAffine(degrees=10, translate=(0.05,0.05), shear=5),\n",
+        "        transforms.ColorJitter(hue=.05, saturation=.05),\n",
+        "        transforms.RandomHorizontalFlip(),\n",
+        "        transforms.RandomRotation(15),\n",
+        "        transforms.Grayscale(num_output_channels=1),\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize((0.5,),(0.5,)),\n",
+        "\n",
+        "    ]),\n",
+        "    'val': transforms.Compose([\n",
+        "        transforms.ToTensor(),\n",
+        "        transforms.Normalize((0.5,),(0.5,))\n",
+        "    ])\n",
+        "}"
+      ],
       "metadata": {
         "id": "BaJGsXrjGva5"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kpTIyZTyIexo"
       },
       "execution_count": null,
       "outputs": []
