--- a/8_Pytorch_Fashion_MNIST_2.ipynb
+++ b/8_Pytorch_Fashion_MNIST_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHFHB/IEwHlW8eYF3PsC9t",
+      "authorship_tag": "ABX9TyMMwBP/vmNM5v/Uh8OtW/z8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "THSN7pAOF_3h",
-        "outputId": "d2100827-4690-4a99-aa42-8a420657a12f"
+        "outputId": "deeec418-1ddd-4989-d9cc-f5d691de1580"
       },
       "outputs": [
         {
@@ -119,7 +119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kpTIyZTyIexo",
-        "outputId": "c8e48d1e-d69e-4bec-8b1c-d0c17875dcd7"
+        "outputId": "5b1b181b-8451-406c-a951-2d039abb4a1e"
       },
       "execution_count": 4,
       "outputs": [
@@ -135,7 +135,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 26421880/26421880 [00:04<00:00, 6362985.97it/s] \n"
+            "100%|██████████| 26421880/26421880 [00:14<00:00, 1778624.76it/s]\n"
           ]
         },
         {
@@ -152,7 +152,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 29515/29515 [00:00<00:00, 56384.48it/s]\n"
+            "100%|██████████| 29515/29515 [00:00<00:00, 57324.49it/s]\n"
           ]
         },
         {
@@ -169,7 +169,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4422102/4422102 [00:09<00:00, 471323.26it/s] \n"
+            "100%|██████████| 4422102/4422102 [00:09<00:00, 469953.56it/s] \n"
           ]
         },
         {
@@ -186,7 +186,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 5148/5148 [00:00<00:00, 17948692.43it/s]\n"
+            "100%|██████████| 5148/5148 [00:00<00:00, 16790262.05it/s]"
           ]
         },
         {
@@ -196,14 +196,60 @@
             "Extracting ./data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/FashionMNIST/raw\n",
             "\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class Net(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super(Net, self).__init__()\n",
+        "    self.conv1 = nn.Conv2d(1, 32, 3)\n",
+        "    self.conv1_bn = nn.BatchNorm2d(32)\n",
+        "    self.conv2 = nn.Conv2d(32, 64, 3)\n",
+        "    self.conv2_bn = nn.BatchNorm2d(64)\n",
+        "    self.pool = nn.MaxPool2d(2, 2)\n",
+        "    self.fc1 = nn.Linear(64 * 12 * 12, 128)\n",
+        "    self.fc2 = nn.Linear(128, 10)\n",
+        "    self.dropOut = nn.Dropout(0.2)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = F.relu(self.conv1_bn(self.conv2(x)))\n",
+        "    x = self.dropOut(x)\n",
+        "    x = self.dropOut(F.relu(self.conv2_bn(self.conv2(x))))\n",
+        "\n",
+        "    x = self.pool(x)\n",
+        "    x = x.view(-1, 64 * 12 * 12)\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = self.fc2(x)\n",
+        "    return x\n",
+        "\n",
+        "\n",
+        "net = Net()\n",
+        "net.to(device)\n"
+      ],
       "metadata": {
         "id": "xHeZFPbsJgJ4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BrIhpdN_txNl"
       },
       "execution_count": null,
       "outputs": []
