--- a/8_Pytorch_Fashion_MNIST_2.ipynb
+++ b/8_Pytorch_Fashion_MNIST_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMwBP/vmNM5v/Uh8OtW/z8",
+      "authorship_tag": "ABX9TyPjMorEwkdy5Jv7xThAWnix",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,9 +247,86 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch.optim as optim\n",
+        "\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9, weight_decay=0.001)"
+      ],
       "metadata": {
         "id": "BrIhpdN_txNl"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs = 15\n",
+        "\n",
+        "epoch_log = []\n",
+        "loss_log = []\n",
+        "accuracy_log = []\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "  print(f'Starting Epoch: {epoch+1}...')\n",
+        "\n",
+        "  running_loss = 0.0\n",
+        "\n",
+        "  for i, data in enumerate(trainloader, 0):\n",
+        "    inputs, labels = data\n",
+        "\n",
+        "    inputs = inputs.to(device)\n",
+        "    labels = labels.to(device)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    outputs = net(inupts)\n",
+        "    loss = criterion(outputs, labels)\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    running_loss += loss.item()\n",
+        "    if i % 100 == 99:\n",
+        "      correct = 0\n",
+        "      total = 0\n",
+        "\n",
+        "      with torch.no_grad():\n",
+        "        for data in testloader:\n",
+        "          images, labels = data\n",
+        "\n",
+        "          images.to(device)\n",
+        "          labels.to(device)\n",
+        "\n",
+        "          _, predicted = torch.max(outputs.data, 1)\n",
+        "          total += labels.size(0)\n",
+        "          correct += (predicted == labels).sum().item()\n",
+        "\n",
+        "        accuracy = 100 * correct / total\n",
+        "        epoch_num = epoch + 1\n",
+        "        actual_loss = running_loss / 50\n",
+        "        print(f'Epoch: {epoch_num}, Mini-Batches Completed: {(i+1)}, Loss: {actual_loss:.3f}, Test Accuracy = {accuracy:.3f}%')\n",
+        "        running_loss = 0.0\n",
+        "\n",
+        "  epoch_log.append(epoch_num)\n",
+        "  loss_log.append(actual_loss)\n",
+        "  accuracy_log.append(accuracy)\n",
+        "\n",
+        "print('Finished Training')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aV4CVEFZu4rW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5IqsHz_HxkC9"
       },
       "execution_count": null,
       "outputs": []
