--- a/8_Pytorch_Fashion_MNIST_2.ipynb
+++ b/8_Pytorch_Fashion_MNIST_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjMorEwkdy5Jv7xThAWnix",
+      "authorship_tag": "ABX9TyP31IwGJ+F3ZtcgUFWL0bdL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,7 +225,7 @@
         "    self.dropOut = nn.Dropout(0.2)\n",
         "\n",
         "  def forward(self, x):\n",
-        "    x = F.relu(self.conv1_bn(self.conv2(x)))\n",
+        "    x = F.relu(self.conv1_bn(self.conv1(x)))\n",
         "    x = self.dropOut(x)\n",
         "    x = self.dropOut(F.relu(self.conv2_bn(self.conv2(x))))\n",
         "\n",
@@ -240,10 +240,34 @@
         "net.to(device)\n"
       ],
       "metadata": {
-        "id": "xHeZFPbsJgJ4"
+        "id": "xHeZFPbsJgJ4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e9117800-2e96-4b04-dcfa-88d2be71ed28"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Net(\n",
+              "  (conv1): Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (conv1_bn): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (conv2_bn): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  (fc1): Linear(in_features=9216, out_features=128, bias=True)\n",
+              "  (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
+              "  (dropOut): Dropout(p=0.2, inplace=False)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -257,7 +281,7 @@
       "metadata": {
         "id": "BrIhpdN_txNl"
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -282,7 +306,7 @@
         "\n",
         "    optimizer.zero_grad()\n",
         "\n",
-        "    outputs = net(inupts)\n",
+        "    outputs = net(inputs)\n",
         "    loss = criterion(outputs, labels)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
@@ -296,8 +320,10 @@
         "        for data in testloader:\n",
         "          images, labels = data\n",
         "\n",
-        "          images.to(device)\n",
-        "          labels.to(device)\n",
+        "          images = images.to(device)\n",
+        "          labels = labels.to(device)\n",
+        "\n",
+        "          outputs = net(images)\n",
         "\n",
         "          _, predicted = torch.max(outputs.data, 1)\n",
         "          total += labels.size(0)\n",
@@ -317,10 +343,23 @@
         "\n"
       ],
       "metadata": {
-        "id": "aV4CVEFZu4rW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aV4CVEFZu4rW",
+        "outputId": "6cedcb9d-946e-4e58-a435-5c52e972caac"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Starting Epoch: 1...\n",
+            "Epoch: 1, Mini-Batches Completed: 100, Loss: 1.565, Test Accuracy = 75.290%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
