--- a/9_CNN_Visualisation_Filter_and_Filter_Activation_Visualisation.ipynb
+++ b/9_CNN_Visualisation_Filter_and_Filter_Activation_Visualisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt+5cJXO68ntLF1Tcj0ex4",
+      "authorship_tag": "ABX9TyNC3IV/0qn587zc77PpBNbx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,16 +84,72 @@
         "\n",
         "# change image type to float\n",
         "x_train = x_train.astype('float32')\n",
-        "x_test.astype('float32')\n",
+        "x_test = x_test.astype('float32')\n",
         "\n",
         "# Normalize the data\n",
         "x_train /= 255.0\n",
         "x_test /= 255.0\n",
         "\n",
-        "print('x_train.shape', x_train.shape)\n"
+        "print('x_train.shape', x_train.shape)\n",
+        "print(x_train.shape[0], 'training samples')\n",
+        "print(x_test.shape[0], 'test samples')\n"
       ],
       "metadata": {
-        "id": "nabIfBqGvftm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nabIfBqGvftm",
+        "outputId": "962cd7ba-f547-4f6f-9957-e14770f157d7"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x_train.shape (60000, 28, 28, 1)\n",
+            "60000 training samples\n",
+            "10000 test samples\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.utils import to_categorical\n",
+        "\n",
+        "y_train = to_categorical(y_train)\n",
+        "y_test = to_categorical(y_test)\n",
+        "\n",
+        "print(\"Number of Classes: \", str(y_test.shape[1]))\n",
+        "\n",
+        "num_classes = y_test.shape[1]\n",
+        "num_pixels = x_train.shape[1] * x_train.shape[2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pun4AkomzT4G",
+        "outputId": "7674b570-f49b-4a9a-a4b7-8dfe9e1aba0f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of Classes:  10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Bt76S4bR1NIg"
       },
       "execution_count": null,
       "outputs": []
