--- a/9_CNN_Visualisation_Filter_and_Filter_Activation_Visualisation.ipynb
+++ b/9_CNN_Visualisation_Filter_and_Filter_Activation_Visualisation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC3IV/0qn587zc77PpBNbx",
+      "authorship_tag": "ABX9TyN9F4iWDQJyX5opMLvch5UO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,9 +147,72 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+        "from tensorflow.keras import backend as K\n",
+        "from tensorflow.keras.optimizers import SGD\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Conv2D(32, kernel_size=(3,3), activation='relu', input_shape=input_shape))\n",
+        "model.add(Conv2D(64, (3,3), activation='relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(128, activation='relu'))\n",
+        "model.add(Dense(num_classes, activation='softmax'))\n",
+        "\n",
+        "model.compile(loss='categorical_crossentropy',\n",
+        "              optimizer=SGD(0.001),\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "print(model.summary())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bt76S4bR1NIg",
+        "outputId": "0321c529-2b37-4663-cb1c-be5ccecc4f69"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 24, 24, 64)        18496     \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2  (None, 12, 12, 64)        0         \n",
+            " D)                                                              \n",
+            "                                                                 \n",
+            " flatten (Flatten)           (None, 9216)              0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 128)               1179776   \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 10)                1290      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 1199882 (4.58 MB)\n",
+            "Trainable params: 1199882 (4.58 MB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Bt76S4bR1NIg"
+        "id": "Yw6T9LVT3UCJ"
       },
       "execution_count": null,
       "outputs": []
